# Rust-API-Template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-build.yaml  docker-dev.yaml
src/: main.rs  state.rs  types.rs  utils.rs
src/database/: mod.rs  notes.rs
src/db/: handlers.rs  mod.rs  pgsql_handlers.rs  redis_handler.rs  redis_handlers.rs  state.rs
src/handlers/: mod.rs
src/middleware/: auth.rs
src/models/: errors.rs  initial.rs  mod.rs  notes.rs  user.rs
src/routes/: auth.rs  health.rs  mod.rs  sample_db.rs
