[package]
name = "rust-api"
version = "1.0.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.6"
log = "0.4"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = true
debug = false
strip = true
