[package]
name = "rust-api"
version = "1.0.0"
edition = "2021"


[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
redis = { version = "0.28.2", features = ["r2d2"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
env_logger = "0.11.6"
actix-cors = "0.7.0"
actix-web = "4.9.0"
serde_json = "1.0"
r2d2 = "0.8.10"
log = "0.4"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = true
debug = false
strip = true
