[package]
name = "rust-api"
version = "1.0.0"
edition = "2024"


[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres"] }
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1.0", features = ["v4"] }
tokio-postgres = "0.7.13"
env_logger = "0.11.6"
actix-web = "4.11.0"
actix-cors = "0.7.1"
deadpool = "0.12.2"
serde_json = "1.0"
tokio = "1.47.1"
log = "0.4"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = true
debug = false
strip = true
